--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="module" src="script.js"></script>
-    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Limelight&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='1em' font-size='80'>🐸</text></svg>">
+    <script type="module" src="script.js"></script>
+    <script type="module" src="globalNav.js"></script>
+    <link rel="stylesheet" href="style.css">
     <title>Agnes uppgifter</title>
 </head>
 
@@ -15,13 +16,10 @@
     <header>
         <h1>Webbteknik 3 - 1ME323</h1>
     </header>
-    <nav>
-        <ul id="global-nav">
-        </ul>
-    </nav>
-    <main id="main">
 
+    <main id="main">
     </main>
+
     <footer>
         <p>Agnes Eriksson</p>
         <p>Webbteknik 3 - 1ME323</p>
