--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -11,12 +11,13 @@
     <title>Uppgift 1</title>
 </head>
 
-<body>
+<body data-currentPage="wU1">
     <header>
         <h1>Uppgift 1 - Samlingssida för inlämningsuppgifter</h1>
     </header>
     <main>
-        <p>Denna uppgift har gått ut på att skapa en landningssida där jag kan samla resten av inlämningsuppgifterna i kursen.</p>
+        <p>Denna uppgift har gått ut på att skapa själva landningssidan där jag kommer samla resten av inlämningsuppgifterna i kursen.</p>
+        <p>Korten för uppgifterna och den globala navigationsdelen är dynamiskt skapade.</p>
     </main>
 </body>
 
