--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Agnes uppgifter</title>
 </head>
 
-<body>
+<body data-currentPage="home">
     <header>
         <h1>Webbteknik 3 - 1ME323</h1>
     </header>
