--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -8,11 +8,11 @@
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='1em' font-size='80'>🐸</text></svg>">
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="style.css">
-    <!-- <script type="module" src="../globalNav.js"></script> -->
+    <script type="module" src="../globalNav.js"></script>
     <title>Uppgift 2</title>
 </head>
 
-<body>
+<body data-currentPage="wU2">
     <header>
         <h1>Konsthyllan</h1>
     </header>
