Add product cards in assignment 2

--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="style.css">
     <script type="module" src="../globalNav.js"></script>
+    <script type="module" src="products.js"></script>
     <title>Uppgift 2</title>
 </head>
 
@@ -21,6 +22,8 @@
     </main>
 
     <aside id="shoppingCart">
+        <h2>Kundvagn</h2>
+
     </aside>
 
     <footer>
