Move products into own script

--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="style.css">
     <script type="module" src="../globalNav.js"></script>
-    <script type="module" src="products.js"></script>
+    <script type="module" src="main.js"></script>
     <title>Uppgift 2</title>
 </head>
 
