Render cart complete?

--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -23,23 +23,7 @@
 
     <aside id="shoppingCart">
         <h2>Kundvagn</h2>
-        <ul id="cartList">
-            <!-- ta bort dessa sedan och generera med localStorage -->
-            <li class="cartItem">
-                <span class="top">
-                    <h3>Blyertspenna HB</h3>
-                    <p class="price">29 kr</p>
-                </span>
-                <p class="number">3 st</p>
-            </li>
-            <li class="cartItem">
-                <span class="top">
-                    <h3>Skissblock A5</h3>
-                    <p class="price">119 kr</p>
-                </span>
-                <p class="number">1 st</p>
-            </li>
-        </ul>
+        <ul id="cartList"></ul>
         <button id="emptyCart">Töm kundvagnen</button>
         <span id="totalSum">
             <h2>Totalsumma:</h2>
