Finish whole assignment2

--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -25,9 +25,9 @@
         <h2>Kundvagn</h2>
         <ul id="cartList"></ul>
         <button id="emptyCart">Töm kundvagnen</button>
-        <span id="totalSum">
+        <span id="total">
             <h2>Totalsumma:</h2>
-            <p>206 kr</p>
+            <p id="totalSum">0 kr</p>
         </span>
     </aside>
 
